add equity methods
